# rinasense

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
Apps/DHTSensor/: dht.c  main.c
Apps/RinaPing/: main.c
Apps/TxRxData/: main.c
Apps/perf/: main.c
components/ARP826/: ARP826.c
components/ARP826/include/: ARP826.h
components/ARP826/tests/: test_arp826.c
components/BufferManagement/: BufferManagement.c
components/BufferManagement/include/: BufferManagement.h
components/BufferManagement/tests/: CMakeLists.txt
components/Common/: #rina_name.c#  .#rina_name.c  CMakeLists.txt  num_mgr.c  rina_gpha.c  rina_name.c
components/Common/include/: bit_array.h  defs.h  include<Common>  macros.h  num_mgr.h  rina_gpha.h  rina_ids.h  rina_name.h
components/Common/tests/: CMakeLists.txt  test_bit_array.c  test_num_mgr.c  test_rina_gpha.c  test_rina_name.c
components/EFCP/: EFCP.c  delim.c  dtp.c
components/EFCP/include/: EFCP.h  connection.h  delim.h  efcpStructures.h
components/Enrollment/: Enrollment.c  SerdesMsg.c
components/Enrollment/include/: Enrollment.h
components/FlowAllocator/: FlowAllocator.c
components/FlowAllocator/include/: FlowAllocator.h
components/HashTable/: RsHashTable.c  RsHashTableInt.c  RsHashTableStr.c
components/HashTable/include/: RsHashTable.h  RsHashTableInt.h  RsHashTableStr.h
components/IPCP/: CMakeLists.txt  IPCP.c  IpcManager.c  cepIdm.c  common.c  factoryIPCP.c  ipcpIdm.c  normalIPCP.c  pidm.c  rstr.c
components/IPCP/include/: IPCP.h  IPCP_api.h  IPCP_events.h  IPCP_timer.h  buffer.h  common.h  mac.h  pidm.h
components/IPCP/tests/: CMakeLists.txt  test_ipcp_pidm.c
components/Mocks/: CMakeLists.txt
components/Mocks/IPCP/: ipcp.c
components/Mocks/IPCP/include/: IPCP.h
components/NetworkInterface/: NetworkInterface.c
components/NetworkInterface/mq/: NetworkInterface.c
components/NetworkInterface/tests/: CMakeLists.txt  test_networkinterface_io.c
components/Portability/: CMakeLists.txt
components/Portability/freertos_idf/: rslist.c
components/Portability/freertos_idf/include/: port_specifics.h
components/Portability/include/: rslist.h  rslog.h
components/Portability/include/portability/: port.h  rsassert.h  rsdefs.h  rslist.h  rslog.h  rsmem.h  rsqueue.h
components/Portability/linux_glib/: CMakeLists.txt  glib_rslist.c  glib_rsposix.c  posix_rsqueue.c  posix_rstime.c
components/Portability/linux_glib/include/: glib_rslist.h  port_specifics.h  posix_rsqueue.h
components/RINA_API/: CMakeLists.txt  RINA_API.c
components/Ribd/: CMakeLists.txt  Rib.c  Ribd.c
components/Ribd/include/: Rib.h  Ribd.h
components/Rmt/: CMakeLists.txt  Rmt.c  du.c  pci.c
components/Rmt/include/: du.h  pci.h  rmt.h
components/ShimIPCP/: ShimIPCP.c
components/ShimIPCP/include/: ShimIPCP.h
components/ShimIPCP/tests/: CMakeLists.txt  test_shim_ipcp.c
components/configRINA/include/: configRINA.h
components/configSensor/include/: configSensor.h
main/: main.c
